<resources>
    <string name="app_name">SettleEase</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="services_description">We provide service for tourist</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="login1">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up_here">Don\'t have an account? Sign up here</string>
    <string name="login2">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="already_have_an_account_login_now">Already have an account? Login now!</string>
    <string name="sign_up1">Sign Up</string>
    <string name="Open_Drawer">Open Navigation Drawer</string>
    <string name="Close_Drawer">Close Navigation Drawer</string>
    <string name="todo1">TODO</string>
    <string name="name1">Name</string>
    <string name="occupation1">Occupation</string>
</resources>