<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:padding="14dp"
    android:gravity="bottom"
    android:layout_gravity="start"
    android:background="@drawable/nav_header_bkg"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/picture"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:src="@drawable/profile"
            app:civ_border_color="@color/white"
            app:civ_border_width="2dp" />

        <ImageView
            android:id="@+id/editPicture"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="50dp"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/todo1" />
    </RelativeLayout>
    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name1"
            android:textSize="24sp"
            android:textColor="@color/blue"
            android:textStyle="bold"/>

    <TextView
        android:id="@+id/occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation1"

        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>