<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_arrow_back_24"
        android:layout_margin="20dp"
        android:minHeight="48dp"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/title"
        android:layout_below="@id/back"
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="15dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        tools:ignore="TextSizeCheck" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginHorizontal="25dp"
        android:paddingBottom="50dp"
        android:paddingTop="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners"
        android:orientation="vertical">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/purple"
         android:text="SIGNIN PAGE"
         android:gravity="center"
         android:textSize="24sp"
         android:layout_marginBottom="50dp"
         />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext_bkg"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="15dp"
            android:hint="@string/email"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/purple"
            android:autofillHints="username@gmail.com" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="abc123"
            android:background="@drawable/edittext_bkg"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="15dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/purple"
            android:padding="15dp"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:text="LOGIN"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:id="@+id/signup_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:minHeight="48dp"
            android:textColor="@color/purple"
            android:text="@string/don_t_have_an_account_sign_up_here"
            android:textAlignment="center"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
